# albatros

./: .gitignore  Cargo.toml
migrations/2017-12-05-194049_create_projects/: up.sql
src/: db.rs  main.rs  router.rs
src/project/: mod.rs  project_controller.rs  project_model.rs
