[package]
name = "albatros"
version = "0.1.0"
authors = ["Stepan Kuzmin <to.stepan.kuzmin@gmail.com>"]

[dependencies]
dotenv = "0.9.0"

iron = "0.6.0"
mount = "0.4.0"
router = "0.6.0"
iron-test = "0.6.0"
bodyparser = "0.8.0"
persistent = "0.4.0"

serde = "1.0.23"
serde_json = "1.0.7"
serde_derive = "1.0.23"

r2d2 = "0.8.1"
diesel = { version = "1.0.0-beta1", features = ["postgres"] }
r2d2-diesel = { version = "1.0.0-beta1" }
diesel_infer_schema = { version = "1.0.0-beta1", features = ["postgres"] }